Updated assets path

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <nav class="navbar sticky-top navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="../assets/Logo_Light.webp" alt="Chancellor Apartments" />
+          <img src="assets/Logo_Light.webp" alt="Chancellor Apartments" />
         </a>
         <button
           class="navbar-toggler"
@@ -77,7 +77,7 @@
       >
         <img
           class="img-fluid"
-          src="../assets/Hero_Image.webp"
+          src="assets/Hero_Image.webp"
           alt="Welcome to your new home at Chancellor Apartments"
         />
       </div>
@@ -133,7 +133,7 @@
               class="info-img-container d-flex justify-content-center align-items-center m-0 p-0"
             >
               <img
-                src="../assets/Front_Row_Residence.webp"
+                src="assets/Front_Row_Residence.webp"
                 alt="Front Row Residence"
                 class="img-fluid rounded"
               />
@@ -166,7 +166,7 @@
               class="info-img-container d-flex justify-content-center align-items-center m-0 p-0"
             >
               <img
-                src="../assets/Adventure_Image.webp"
+                src="assets/Adventure_Image.webp"
                 alt="Adventure at Your Door"
                 class="img-fluid rounded"
               />
@@ -201,7 +201,7 @@
               class="info-img-container d-flex justify-content-center align-items-center m-0 p-0"
             >
               <img
-                src="../assets/Community_Image.webp"
+                src="assets/Community_Image.webp"
                 alt="Community Centered Living"
                 class="img-fluid rounded"
               />
@@ -246,7 +246,7 @@
               <div class="cards-wrapper">
                 <div class="card">
                   <img
-                    src="../assets/Studio_Image.png"
+                    src="assets/Studio_Image.png"
                     class="card-img-top"
                     alt="Studio OA Floorplan"
                   />
@@ -264,7 +264,7 @@
                 </div>
                 <div class="card d-none d-lg-block">
                   <img
-                    src="../assets/Studio_Image.png"
+                    src="assets/Studio_Image.png"
                     class="card-img-top"
                     alt="Studio OB Floorplan"
                   />
@@ -282,7 +282,7 @@
                 </div>
                 <div class="card d-none d-lg-block">
                   <img
-                    src="../assets/Studio_Image.png"
+                    src="assets/Studio_Image.png"
                     class="card-img-top"
                     alt="Studio OC Floorplan"
                   />
@@ -304,7 +304,7 @@
               <div class="cards-wrapper">
                 <div class="card">
                   <img
-                    src="../assets/1_Bed_Image.png"
+                    src="assets/1_Bed_Image.png"
                     class="card-img-top"
                     alt="1 Bed OA Floorplan"
                   />
@@ -322,7 +322,7 @@
                 </div>
                 <div class="card d-none d-lg-block">
                   <img
-                    src="../assets/1_Bed_Image.png"
+                    src="assets/1_Bed_Image.png"
                     class="card-img-top"
                     alt="1 Bed OB Floorplan"
                   />
@@ -338,7 +338,7 @@
                 </div>
                 <div class="card d-none d-lg-block">
                   <img
-                    src="../assets/1_Bed_Image.png"
+                    src="assets/1_Bed_Image.png"
                     class="card-img-top"
                     alt="1 Bed OC Floorplan"
                   />
@@ -360,7 +360,7 @@
               <div class="cards-wrapper">
                 <div class="card">
                   <img
-                    src="../assets/2_Bed_Image.png"
+                    src="assets/2_Bed_Image.png"
                     class="card-img-top"
                     alt="2 Bed OA Floorplan"
                   />
@@ -378,7 +378,7 @@
                 </div>
                 <div class="card d-none d-lg-block">
                   <img
-                    src="../assets/2_Bed_Image.png"
+                    src="assets/2_Bed_Image.png"
                     class="card-img-top"
                     alt="2 Bed OB Floorplan"
                   />
@@ -394,7 +394,7 @@
                 </div>
                 <div class="card d-none d-lg-block">
                   <img
-                    src="../assets/2_Bed_Image.png"
+                    src="assets/2_Bed_Image.png"
                     class="card-img-top"
                     alt="2 Bed OC Floorplan"
                   />
@@ -440,7 +440,7 @@
       >
         <a class="col-10 col-md-4 text-center text-md-start" href="#">
           <img
-            src="../assets/Logo_Light.webp"
+            src="assets/Logo_Light.webp"
             alt="Chancellor Apartments"
             class="img-fluid"
           />
